--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Product Preview Design</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="side_bar">
+            <img src="Lehenga_pic_1.webp" alt="Lehenga_pic_1" class="product_img"/>
+            <img src="lehenga_pic_2.webp" alt="lehenga_pic_2" class="product_img"/>
+            <img src="Lehenga_pic_3.jpeg" alt="Lehenga_pic_3" class="product_img"/>
+            <img src="Lehenga_pic_4.jpeg" alt="Lehenga_pic_4" class="product_img"/>
+        </div>
+    </div>
 </body>
 </html>
