--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <img src="Lehenga_pic_3.jpeg" alt="Lehenga_pic_3" class="product_img"/>
             <img src="Lehenga_pic_4.jpeg" alt="Lehenga_pic_4" class="product_img"/>
         </div>
+        <div class="screen">
+            <img src="Lehenga_pic_1.webp" alt="Lehenga_pic_1" class="main_img"/>
+        </div>
     </div>
 </body>
 </html>
