increment_decrement_feature added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
         </div>
         <div class="screen">
             <img src="Lehenga_pic_1.webp" alt="Lehenga_pic_1" class="main_img"/>
+            <h3 class="product_title">Long-skirt Lehenga</h3>
+            <div class="quantity_section">
+                <img src="plus.png" alt="increment_symbol" class="symbol"/>
+                <span id="quantity">1</span>
+                <img src="minus.png" alt="decrement_symbol" class="symbol"/>
+            </div>
         </div>
     </div>
 </body>
-</html>
+</html>>
