first card design completed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <span id="quantity">1</span>
                 <img src="minus.png" alt="decrement_symbol" class="symbol"/>
             </div>
+            <div class="button_section">
+                <button type="button" class="button">Add to Cart</button>
+            </div>
         </div>
     </div>
 </body>
