onclick function added

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <div class="side_bar">
-            <img src="Lehenga_pic_1.webp" alt="Lehenga_pic_1" class="product_img"/>
-            <img src="lehenga_pic_2.webp" alt="lehenga_pic_2" class="product_img"/>
-            <img src="Lehenga_pic_3.jpeg" alt="Lehenga_pic_3" class="product_img"/>
-            <img src="Lehenga_pic_4.jpeg" alt="Lehenga_pic_4" class="product_img"/>
+            <img src="Lehenga_pic_1.webp" alt="Lehenga_pic_1" class="product_img" onclick="lehenga_img1()"/>
+            <img src="lehenga_pic_2.webp" alt="lehenga_pic_2" class="product_img" onclick="lehenga_img2()"/>
+            <img src="Lehenga_pic_3.jpeg" alt="Lehenga_pic_3" class="product_img" onclick="lehenga_img3()"/>
+            <img src="Lehenga_pic_4.jpeg" alt="Lehenga_pic_4" class="product_img" onclick="lehenga_img4()"/>
         </div>
         <div class="screen">
             <img src="Lehenga_pic_1.webp" alt="Lehenga_pic_1" class="main_img"/>
@@ -26,7 +26,20 @@
                 <button type="button" class="button">Add to Cart</button>
             </div>
         </div>
-        
     </div>
+    <script>
+        function lehenga_img1(){
+
+        }
+        function lehenga_img2(){
+
+        }
+        function lehenga_img3(){
+
+        }
+        function lehenga_img4(){
+
+        }
+    </script>
 </body>
 </html>>
